# app_leads_conversacional

./: .Dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pnpm-lock.yaml  pyproject.toml  render.yaml  show-tree.sh  show_tree.bat
app/: __init__.py  config.py  main.py  models.py  schemas.py  validate_security.py
app/agents/: graph_system.py
app/api/: __init__.py  auth.py  chat.py  leads.py  productos.py  public.py  vendedor.py
app/middleware/: security.py
app/services/: auth_service.py  checkpointer.py  database.py  email_service.py  embeddings.py  product_embeddings.py
app/tools/: database_tools.py  email_tools.py  qualification_tools.py  rag_tools.py
client/: .env.production  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  I18nContext.tsx  i18n.ts  index.css  main.tsx
client/src/components/: Animation3D.tsx  Beneficios.tsx  ChatWidget.css  ChatWidget.tsx  ContactForm.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Products.tsx  WhatsAppButton.tsx
client/src/config/: env.ts
crm/: index.html  package.json  pnpm-lock.yaml
crm/public/: manifest.json
crm/src/: App.tsx  index.css
crm/src/context/: AuthContext.tsx
crm/src/pages/: Dashboard.tsx  Home.tsx  LeadDetail.tsx  Leads.tsx  Login.tsx  Usuarios.tsx  Vendedores.tsx  WorkflowCanvas.tsx
crm/src/services/: api.ts
docker/fastapi/: Dockerfile
docker/postgres/: 01-init.sql  02-data.sql  Dockerfile  pg_hba.conf  postgresql.conf
test/: test_devs.py  test_products.py  test_security.py
